# terraform-cost-predictor

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_resource.md
.github/workflows/: ci.yml  terraform-cost.yml
cli/: main.py
configs/: budget.yaml
docs/: usage.md
examples/: budget.yaml  sample_plan.json
internal/budget/: __init__.py  budget_checker.py
internal/compare/: __init__.py  comparator.py
internal/parser/: __init__.py  plan_parser.py
internal/pricing/: __init__.py  aws_pricing.py  azure_pricing.py  base.py  gcp_pricing.py  pricing_db.json  router.py
internal/report/: reporter.py
storage/: __init__.py  history.py
tests/: test_budget.py  test_compare.py  test_parser.py  test_pricing.py
