[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terraform-cost-predictor"
version = "1.0.0"
description = "Predict AWS cloud costs from Terraform plans before deployment"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "TerraPredict Contributors" }]
keywords = ["terraform", "aws", "cost", "devops", "infrastructure", "cloud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
cost-predict = "cli.main:app"

[project.urls]
Homepage = "https://github.com/AbdullahbinAmin/terraform-cost-predictor"
Repository = "https://github.com/AbdullahbinAmin/terraform-cost-predictor"
Issues = "https://github.com/AbdullahbinAmin/terraform-cost-predictor/issues"
Documentation = "https://github.com/AbdullahbinAmin/terraform-cost-predictor/blob/main/docs/usage.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "internal*", "storage*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]


[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
